@@ -30,7 +30,10 @@
  *          java.management/com.sun.jmx.remote.security
  * @run clean RMIPasswdAuthTest
  * @run build RMIPasswdAuthTest SimpleStandard SimpleStandardMBean
+ *
+ * @run main/othervm RMIPasswdAuthTest
  * @run main/othervm -Djava.security.manager=allow RMIPasswdAuthTest
+ * @run main/othervm -Djava.security.manager=allow -DSimpleStandard.useGetSubjectACC=true RMIPasswdAuthTest
  */
 
 import java.io.File;
